# example-okta-connector

./: .gitignore  Dockerfile  README.md  settings.toml  test-agent.Dockerfile
okta/: README.md  pyproject.toml
okta/connector_okta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
okta/okta/: capabilities_read.py  capabilities_write.py  client.py  enums.py  integration.py  models.py  pagination.py
okta/tests/test_write_capabilities/: test_delete_account_cases.py
scripts/: run_compile_in_docker.sh
sharepoint/: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
sharepoint/connector_sharepoint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sharepoint/sharepoint/: capabilities_read.py  client.py  constants.py  enums.py  integration.py  main.py  pagination.py  settings.py
sharepoint/sharepoint/dto/: response.py
sharepoint/tests/: common_mock_data.py  test_all_capabilities.py
sharepoint/tests/test_read_capabilities/: test_get_last_activity_cases.py  test_list_accounts_cases.py
sharepoint/tests/test_write_capabilities/: test_assign_entitlement_cases.py  test_create_account_cases.py  test_delete_account_cases.py  test_unassign_entitlement_cases.py
